--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="keywords" content="recon, robot.txt,open reirect, login pages, crt.sh, wordpress scan, pastebin entries, find cms,search amazon s3 bucket, github search, reverse ip etc">
     <link rel="icon" type="image/ico" href="/assets/favicon.png"/>
     
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TXCG7E4W4B"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
