--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 </script>
 </head>
 <body>
-    <div class="headtitle">
+    <!-- <div class="headtitle">
         <h1>Investigator helps you quickly check and gather information about the target domain name.</h1>
-    </div>
+    </div> -->
   
     <div class="container">
        
